--- a/app/build.gradle
+++ b/app/build.gradle
@@ -59,6 +59,13 @@ dependencies {
     implementation 'androidx.preference:preference:1.1.1'
     androidTestImplementation "androidx.navigation:navigation-testing:2.3.5"
 
+    // Retrofit
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+
+    // Picasso
+    implementation 'com.squareup.picasso:picasso:2.5.2'
+
     // Pin View
     implementation 'io.github.chaosleung:pinview:1.4.4'
 
